# chat-with-mistral

./: agents.py  chat_mistral_notebook_v0.1.0.ipynb  eval.py  pyproject.toml  state.py  tasks.py
core/: agents.py
notebooks/: chat_mistral_notebook_v0.1.0.ipynb
